--- a/index.html
+++ b/index.html
@@ -45,17 +45,18 @@
   </style>
 </head>
 <body>
-  <h1>🛠 General Mechanical KTM Quiz Topics</h1>
+  <h1>🛠 General Mechanical MCQ Quiz - Topic Wise</h1>
+  <h2>All the MCQ related to General Mechanical are listed below</h2>
   <div class="container">
     <ul>
-      <li><a class="quiz-link" href="machine_drawing.html">1. Machine Drawing — 38 MCQs</a></li>
-      <li><a class="quiz-link" href="heat_engines.html">2. Heat Engines — 165 MCQs</a></li>
-      <li><a class="quiz-link" href="thermodynamics.html">3. Thermodynamics — 74 MCQs</a></li>
-      <li><a class="quiz-link" href="industrial_management.html">4. Basic Industrial Management — 65 MCQs</a></li>
-      <li><a class="quiz-link" href="electro_mechanical.html">5. Electro-Mechanical Principles — 34 MCQs</a></li>
-      <li><a class="quiz-link" href="industrial_boiler.html">6. Industrial Boiler — 6 MCQs</a></li>
-      <li><a class="quiz-link" href="estimating_costing.html">7. Estimating and Costing — 7 MCQs</a></li>
-      <li><a class="quiz-link" href="applied_mechanics.html">8. Applied Mechanics — 47 MCQs</a></li>
+      <li><a class="quiz-link" href="machine_drawing.html">1. Machine Drawing — 71 MCQs</a></li>
+      <li><a class="quiz-link" href="heat_engines.html">2. Heat Engines — 44 MCQs</a></li>
+      <li><a class="quiz-link" href="thermodynamics.html">3. Thermodynamics — 127 MCQs</a></li>
+      <li><a class="quiz-link" href="industrial_management.html">4. Basic Industrial Management — 61 MCQs</a></li>
+      <li><a class="quiz-link" href="electro_mechanical.html">5. Electro-Mechanical Principles — 23 MCQs</a></li>
+      <li><a class="quiz-link" href="industrial_boiler.html">6. Industrial Boiler — 51 MCQs</a></li>
+      <li><a class="quiz-link" href="estimating_costing.html">7. Estimating and Costing — 22 MCQs</a></li>
+      <li><a class="quiz-link" href="applied_mechanics.html">8. Applied Mechanics — 141 MCQs</a></li>
     </ul>
   </div>
 </body>
