--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <h1>🛠 General Mechanical MCQ Quiz - Topic Wise</h1>
-  <h2>All the MCQ related to General Mechanical are listed below</h2>
+  <h2><center>All the MCQ related to General Mechanical are listed below</center></h2>
   <div class="container">
     <ul>
       <li><a class="quiz-link" href="machine_drawing.html">1. Machine Drawing — 71 MCQs</a></li>
