--- a/applied_mechanics.html
+++ b/applied_mechanics.html
@@ -59,7 +59,8 @@
   </style>
 </head>
 <body>
-  <h1>Mechanics MCQ Part 1</h1>
+  <h1>Mechanics MCQ</h1>
+  <H2>7 MCQ WILL COME  IN EXAM</H2>
   <div class="quiz-container" id="quiz"></div>
   <div class="score" id="score"></div>
 
