--- a/electro_mechanical.html
+++ b/electro_mechanical.html
@@ -54,6 +54,7 @@
 </head>
 <body>
   <h1>Electro-Mechanical Quiz</h1>
+  <H2> 3 MCQs WILL COME IN EXAM</H2>
   <div class="quiz-container" id="quiz"></div>
 
   <script>
