--- a/estimating_costing.html
+++ b/estimating_costing.html
@@ -15,6 +15,7 @@
   </style>
 </head>
 <body>
+  <H2> 3 MCQs WILL COME IN EXAM</H2>
   <div class="quiz-container" id="quiz"></div>
   <div class="score" id="score"></div>
 
