--- a/heat_engines.html
+++ b/heat_engines.html
@@ -60,6 +60,7 @@
 </head>
 <body>
   <h1>Heat Engines Quiz</h1>
+  <H2> 3 MCQs WILL COME IN EXAM</H2>
   <div class="quiz-container" id="quiz"></div>
   <div class="score" id="score"></div>
 
