--- a/industrial_boiler.html
+++ b/industrial_boiler.html
@@ -47,6 +47,7 @@
 </head>
 <body>
   <h1>Boiler MCQ Quiz (30 Questions)</h1>
+  <H2> 3 MCQs WILL COME IN EXAM</H2>
   <div class="quiz-container" id="quiz"></div>
 
   <script>
