--- a/industrial_management.html
+++ b/industrial_management.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>General Awareness Quiz</title>
+    <title>Industrial management</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,7 +63,8 @@
 </head>
 
 <body>
-    <h1>General Awareness and Public Management Quiz</h1>
+    <h1>Industrial Management mcq</h1>
+    <H2> 3 MCQs WILL COME IN EXAM</H2>
     <div class="quiz-container" id="quiz"></div>
 
     <script>
