--- a/machine_drawing.html
+++ b/machine_drawing.html
@@ -60,6 +60,7 @@
 </head>
 <body>
   <h1>Machine Drawing MCQ Quiz</h1>
+  <H2> 4 MCQs WILL COME IN EXAM</H2>
   <div class="quiz-container" id="quiz"></div>
   <div id="score"></div>
 
