--- a/thermodynamics.html
+++ b/thermodynamics.html
@@ -54,6 +54,7 @@
 </head>
 <body>
   <h1>Thermodynamics MCQ Quiz</h1>
+  <H2> 4 MCQs WILL COME IN EXAM</H2>
   <div class="quiz-container" id="quiz"></div>
 
 
