--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <div class="card"><a href="industrial_boiler.html">6. Industrial Boiler — 51 MCQs</a></div>
     <div class="card"><a href="estimating_costing.html">7. Estimating and Costing — 22 MCQs</a></div>
     <div class="card"><a href="applied_mechanics.html">8. Applied Mechanics — 141 MCQs</a></div>
+        <div class="card"><a href="mock-test1.html">Mock test 1 50 mcqs</a></div>
   </div>
 
   <footer>
