--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
     <div class="card"><a href="estimating_costing.html">7. Estimating and Costing — 22 MCQs</a></div>
     <div class="card"><a href="applied_mechanics.html">8. Applied Mechanics — 141 MCQs</a></div>
         <div class="card"><a href="mock-test1.html">Mock test 1 50 mcqs</a></div>
+    <div class="card"><a href="mock-test2.html">Mock test 2 50 mcqs</a></div>
+    <div class="card"><a href="mock-test3.html">Mock test 3 50 mcqs</a></div>
   </div>
 
   <footer>
