--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <div class="card"><a href="mock-test1.html">Mock test 1 50 mcqs</a></div>
     <div class="card"><a href="mock-test2.html">Mock test 2 50 mcqs</a></div>
     <div class="card"><a href="mock-test3.html">Mock test 3 50 mcqs</a></div>
+    <div class="card"><a href="mock-test4.html">Mock test 4 50 mcqs</a></div>
   </div>
 
   <footer>
