--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <div class="card"><a href="mock-test3.html">Mock test 3 50 mcqs</a></div>
     <div class="card"><a href="mock-test4.html">Mock test 4 50 mcqs</a></div>
     <div class="card"><a href="mock-test5.html">Mock test 5 50 mcqs</a></div>
+     <div class="card"><a href="mock-test6.html">Mock test 5 50 mcqs</a></div>
   </div>
 
   <footer>
