--- a/index.html
+++ b/index.html
@@ -1,3 +1,426 @@
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>General Mechanical KTM Quiz</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Inter', sans-serif;
+        }
+
+        body {
+            background: linear-gradient(to right, #e0f7fa, #b2f5ea);
+            color: #2c3e50;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2rem;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 2rem;
+            background: #1b1b1b;
+            color: white;
+            padding: 1.5rem;
+            width: 100%;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        header p {
+            font-size: 1.1rem;
+            opacity: 0.9;
+        }
+
+        .search-bar {
+            margin: 1rem 0;
+            width: 100%;
+            max-width: 600px;
+            position: relative;
+        }
+
+        .search-bar input {
+            width: 100%;
+            padding: 0.8rem 1rem;
+            border: none;
+            border-radius: 8px;
+            font-size: 1rem;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .search-bar input::placeholder {
+            color: #888;
+        }
+
+        .tabs {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .tab {
+            padding: 0.8rem 1.5rem;
+            background: #1b1b1b;
+            color: white;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        .tab.active, .tab:hover {
+            background: #2a5298;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
+        }
+
+        .card {
+            background-color: rgba(255, 255, 255, 0.95);
+            padding: 1.5rem;
+            border-radius: 12px;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, background 0.3s ease;
+            position: relative;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            background-color: #e6fffa;
+        }
+
+        .card a {
+            text-decoration: none;
+            font-weight: 600;
+            color: #1b1b1b;
+            font-size: 1.2rem;
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+
+        .card a:hover {
+            color: #2a5298;
+        }
+
+        .card .tooltip {
+            visibility: hidden;
+            background: #2c3e50;
+            color: white;
+            font-size: 0.9rem;
+            padding: 0.5rem;
+            border-radius: 6px;
+            position: absolute;
+            top: -40px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+            z-index: 10;
+        }
+
+        .card:hover .tooltip {
+            visibility: visible;
+        }
+
+        .card.completed::after {
+            content: '✅';
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 1.2rem;
+        }
+
+        .exam-tips {
+            margin: 2rem 0;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 1.5rem;
+            border-radius: 12px;
+            max-width: 900px;
+            text-align: center;
+        }
+
+        .exam-tips h3 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .exam-tips ul {
+            list-style: none;
+            font-size: 1rem;
+            color: #333;
+        }
+
+        .exam-tips li {
+            margin: 0.5rem 0;
+        }
+
+        footer {
+            margin-top: 2rem;
+            text-align: center;
+            font-size: 0.9rem;
+            color: #444;
+            padding: 1rem;
+            background: #1b1b1b;
+            color: white;
+            width: 100%;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 1024px) {
+            .container {
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            }
+        }
+
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            header p {
+                font-size: 1rem;
+            }
+
+            .tabs {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .tab {
+                width: 80%;
+                text-align: center;
+            }
+
+            .search-bar input {
+                font-size: 0.9rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                grid-template-columns: 1fr;
+            }
+
+            .card {
+                padding: 1rem;
+            }
+
+            .card a {
+                font-size: 1.1rem;
+            }
+
+            .exam-tips {
+                padding: 1rem;
+            }
+
+            footer {
+                font-size: 0.8rem;
+            }
+        }
+
+        /* Animation */
+        .card {
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+    </style>
+    <script>
+        // Search Functionality
+        function filterCards() {
+            const input = document.getElementById('search').value.toLowerCase();
+            const cards = document.querySelectorAll('.card');
+            cards.forEach(card => {
+                const text = card.textContent.toLowerCase();
+                card.style.display = text.includes(input) ? '' : 'none';
+            });
+        }
+
+        // Tab Functionality
+        function showSection(sectionId) {
+            document.querySelectorAll('.container').forEach(container => {
+                container.style.display = container.id === sectionId ? 'grid' : 'none';
+            });
+            document.querySelectorAll('.tab').forEach(tab => {
+                tab.classList.toggle('active', tab.getAttribute('data-section') === sectionId);
+            });
+        }
+    </script>
+</head>
+<body>
+    <header>
+        <h1>🛠 General Mechanical KTM Quiz</h1>
+        <p>All MCQs & Mock Tests for Nepal PSC General Mechanical Exam (May 15, 2025)</p>
+    </header>
+
+    <div class="search-bar">
+        <input type="text" id="search" placeholder="Search topics or mock tests..." oninput="filterCards()">
+    </div>
+
+    <div class="tabs">
+        <div class="tab active" data-section="topics" onclick="showSection('topics')">Topic-Wise MCQs</div>
+        <div class="tab" data-section="mock-tests" onclick="showSection('mock-tests')">Mock Tests</div>
+    </div>
+
+    <div class="container" id="topics">
+        <div class="card">
+            <a href="machine_drawing.html">1. Machine Drawing — 71 MCQs</a>
+            <span class="tooltip">Orthographic projections, joints, dimensioning</span>
+        </div>
+        <div class="card">
+            <a href="heat_engines.html">2. Heat Engines — 44 MCQs</a>
+            <span class="tooltip">Otto, Diesel, Brayton cycles, engine efficiency</span>
+        </div>
+        <div class="card">
+            <a href="thermodynamics.html">3. Thermodynamics — 127 MCQs</a>
+            <span class="tooltip">Gas laws, Carnot efficiency, thermodynamic processes</span>
+        </div>
+        <div class="card">
+            <a href="industrial_management.html">4. Basic Industrial Management — 61 MCQs</a>
+            <span class="tooltip">Labor laws, ILO, safety management</span>
+        </div>
+        <div class="card">
+            <a href="electro_mechanical.html">5. Electro-Mechanical Principles — 23 MCQs</a>
+            <span class="tooltip">AC/DC motors, generators, power factor</span>
+        </div>
+        <div class="card">
+            <a href="industrial_boiler.html">6. Industrial Boiler — 51 MCQs</a>
+            <span class="tooltip">Boiler efficiency, safety valves, heat transfer</span>
+        </div>
+        <div class="card">
+            <a href="estimating_costing.html">7. Estimating and Costing — 22 MCQs</a>
+            <span class="tooltip">Break-even, ROI, depreciation</span>
+        </div>
+        <div class="card">
+            <a href="applied_mechanics.html">8. Applied Mechanics — 141 MCQs</a>
+            <span class="tooltip">Statics, kinematics, dynamics, torque</span>
+        </div>
+        <div class="card">
+            <a href="formulas.html">Formula Cheat Sheet</a>
+            <span class="tooltip">All key formulas for quick review</span>
+        </div>
+    </div>
+
+    <div class="container" id="mock-tests" style="display: none;">
+        <div class="card">
+            <a href="mock-test1.html">Mock Test 1 — 50 MCQs</a>
+            <span class="tooltip">Full syllabus practice</span>
+        </div>
+        <div class="card">
+            <a href="mock-test2.html">Mock Test 2 — 50 MCQs</a>
+            <span class="tooltip">Applied Mechanics & Thermodynamics focus</span>
+        </div>
+        <div class="card">
+            <a href="mock-test3.html">Mock Test 3 — 50 MCQs</a>
+            <span class="tooltip">Heat Engines & Electro-Mechanical</span>
+        </div>
+        <div class="card">
+            <a href="mock-test4.html">Mock Test 4 — 50 MCQs</a>
+            <span class="tooltip">Industrial Boiler & Estimating</span>
+        </div>
+        <div class="card">
+            <a href="mock-test5.html">Mock Test 5 — 50 MCQs</a>
+            <span class="tooltip">Machine Drawing & Management</span>
+        </div>
+        <div class="card">
+            <a href="mock-test6.html">Mock Test 6 — 50 MCQs</a>
+            <span class="tooltip">Comprehensive syllabus review</span>
+        </div>
+        <div class="card">
+            <a href="mock-test7.html">Mock Test 7 — 50 MCQs</a>
+            <span class="tooltip">Formula-based questions</span>
+        </div>
+        <div class="card">
+            <a href="mock-test8.html">Mock Test 8 — 50 MCQs</a>
+            <span class="tooltip">Numerical problem practice</span>
+        </div>
+        <div class="card">
+            <a href="mock-test9.html">Mock Test 9 — 50 MCQs</a>
+            <span class="tooltip">Paper I simulation</span>
+        </div>
+        <div class="card">
+            <a href="mock-test91.html">Mock Test 91 — 50 MCQs</a>
+            <span class="tooltip">Paper II simulation</span>
+        </div>
+        <div class="card">
+            <a href="mock-test92.html">Mock Test 92 — 50 MCQs</a>
+            <span class="tooltip">Advanced formula applications</span>
+        </div>
+        <div class="card">
+            <a href="mock-test93.html">Mock Test 93 — 50 MCQs</a>
+            <span class="tooltip">Conceptual question focus</span>
+        </div>
+        <div class="card">
+            <a href="mock-test94.html">Mock Test 94 — 50 MCQs</a>
+            <span class="tooltip">Mixed topic practice</span>
+        </div>
+        <div class="card">
+            <a href="mock-test95.html">Mock Test 95 — 50 MCQs</a>
+            <span class="tooltip">Time-bound mock test</span>
+        </div>
+        <div class="card">
+            <a href="mock-test96.html">Mock Test 96 — 50 MCQs</a>
+            <span class="tooltip">Final exam simulation</span>
+        </div>
+        <div class="card">
+            <a href="mock-page.html">Mock Test Simulator</a>
+            <span class="tooltip">Timed mock test with latest 50 MCQs</span>
+        </div>
+    </div>
+
+    <div class="exam-tips">
+        <h3>Exam Preparation Tips</h3>
+        <ul>
+            <li>Practice 1–2 mock tests daily, timing yourself for 60 minutes (Paper I) and 24 minutes (Paper II MCQs).</li>
+            <li>Review the <a href="formulas.html">formula cheat sheet</a> nightly for quick recall.</li>
+            <li>Focus on high-weightage topics: Applied Mechanics (25%), Thermodynamics (15%).</li>
+            <li>Double-check numerical answers for units (e.g., J for work, % for efficiency).</li>
+            <li>Stay calm during the exam and attempt all ~42 MCQs (no negative marking assumed).</li>
+        </ul>
+    </div>
+
+    <footer>
+        © 2025 BerlinNeverDie | General Mechanical KTM Quiz Portal 🌐
+    </footer>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -105,3 +528,4 @@
   </footer>
 </body>
 </html>
+ -->
