--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <span class="tooltip">Statics, kinematics, dynamics, torque</span>
         </div>
         <div class="card">
-            <a href="formulas.html">Formula Cheat Sheet</a>
+            <a href="formula.html">Formula Cheat Sheet</a>
             <span class="tooltip">All key formulas for quick review</span>
         </div>
     </div>
