--- a/index.html
+++ b/index.html
@@ -521,11 +521,12 @@
     <div class="card"><a href="mock-test4.html">Mock test 4 50 mcqs</a></div>
     <div class="card"><a href="mock-test5.html">Mock test 5 50 mcqs</a></div>
      <div class="card"><a href="mock-test6.html">Mock test 5 50 mcqs</a></div> -->
-  </div>
+<!--   </div>
 
   <footer>
     &copy; 2025 BerlinNeverDie | General Mechanical KTM Quiz Portal 🌐
   </footer>
 </body>
 </html>
+ -->
  -->
