--- a/index.html
+++ b/index.html
@@ -363,33 +363,37 @@
             <span class="tooltip">Paper I simulation</span>
         </div>
         <div class="card">
-            <a href="mock-test91.html">Mock Test 91 — 50 MCQs</a>
+            <a href="mock-test91.html">Mock Test 10 — 100 MCQs</a>
             <span class="tooltip">Paper II simulation</span>
         </div>
         <div class="card">
-            <a href="mock-test92.html">Mock Test 92 — 50 MCQs</a>
+            <a href="mock-test92.html">Mock Test 11 — 100 MCQs</a>
             <span class="tooltip">Advanced formula applications</span>
         </div>
         <div class="card">
-            <a href="mock-test93.html">Mock Test 93 — 50 MCQs</a>
+            <a href="mock-test93.html">Mock Test 12 — 50 MCQs</a>
             <span class="tooltip">Conceptual question focus</span>
         </div>
         <div class="card">
-            <a href="mock-test94.html">Mock Test 94 — 50 MCQs</a>
+            <a href="mock-test94.html">Mock Test 13 — 50 MCQs AI GENERATED</a>
             <span class="tooltip">Mixed topic practice</span>
         </div>
         <div class="card">
-            <a href="mock-test95.html">Mock Test 95 — 50 MCQs</a>
+            <a href="mock-test95.html">Mock Test 14 — 50 MCQs AI GENERATED</a>
             <span class="tooltip">Time-bound mock test</span>
         </div>
         <div class="card">
-            <a href="mock-test96.html">Mock Test 96 — 50 MCQs</a>
+            <a href="mock-test96.html">Mock Test 15 — 100 MCQs AI GENERATED</a>
             <span class="tooltip">Final exam simulation</span>
         </div>
-        <div class="card">
+         <div class="card">
+            <a href="formula-mock.html">Only formula mock test — 50 MCQs AI GENERATED</a>
+            <span class="tooltip">FOMULA MCQs simulation</span>
+        </div>
+<!--         <div class="card">
             <a href="mock-page.html">Mock Test Simulator</a>
             <span class="tooltip">Timed mock test with latest 50 MCQs</span>
-        </div>
+        </div> -->
     </div>
 
     <div class="exam-tips">
