--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <h3>Exam Preparation Tips</h3>
         <ul>
             <li>Practice 1–2 mock tests daily, timing yourself for 60 minutes (Paper I) and 24 minutes (Paper II MCQs).</li>
-            <li>Review the <a href="formulas.html">formula cheat sheet</a> nightly for quick recall.</li>
+            <li>Review the <a href="formula.html">formula cheat sheet</a> nightly for quick recall.</li>
             <li>Focus on high-weightage topics: Applied Mechanics (25%), Thermodynamics (15%).</li>
             <li>Double-check numerical answers for units (e.g., J for work, % for efficiency).</li>
             <li>Stay calm during the exam and attempt all ~42 MCQs (no negative marking assumed).</li>
