--- a/formula.html
+++ b/formula.html
@@ -579,7 +579,7 @@
     </div>
 
     <div class="links">
-        <a href="quiz-portal.html">Quiz Portal</a>
+        <a href="formula-mock.html">Quiz Portal</a>
         <a href="mock-tests.html">Mock Test List</a>
         <a href="mock-page.html">Formula Quiz (50 MCQs)</a>
         <a href="#" onclick="alert('Download functionality requires a backend. Save as HTML or print to PDF.')">Download PDF</a>
