--- a/index.html
+++ b/index.html
@@ -390,6 +390,10 @@
             <a href="formula-mock.html">Only formula mock test — 50 MCQs AI GENERATED</a>
             <span class="tooltip">FOMULA MCQs simulation</span>
         </div>
+         <div class="card">
+            <a href="public-management.html">Public management summerized(10*2 Marks=20marks)</a>
+            <span class="tooltip">FOMULA MCQs simulation</span>
+        </div>
 <!--         <div class="card">
             <a href="mock-page.html">Mock Test Simulator</a>
             <span class="tooltip">Timed mock test with latest 50 MCQs</span>
