--- a/index.html
+++ b/index.html
@@ -323,6 +323,14 @@
             <a href="formula.html">Formula Cheat Sheet</a>
             <span class="tooltip">All key formulas for quick review</span>
         </div>
+        <div class="card">
+            <a href="public-management.html">Public management summerized(10*2 Marks=20marks)</a>
+            <span class="tooltip">FOMULA MCQs simulation</span>
+        </div>
+        <div class="card">
+            <a href="public-mock.html">Public management MCQs( 84 MCQs)</a>
+            <span class="tooltip">FOMULA MCQs simulation</span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
@@ -390,14 +398,11 @@
             <a href="formula-mock.html">Only formula mock test — 50 MCQs AI GENERATED</a>
             <span class="tooltip">FOMULA MCQs simulation</span>
         </div>
-         <div class="card">
-            <a href="public-management.html">Public management summerized(10*2 Marks=20marks)</a>
-            <span class="tooltip">FOMULA MCQs simulation</span>
-        </div>
-<!--         <div class="card">
+         
+        <div class="card">
             <a href="mock-page.html">Mock Test Simulator</a>
             <span class="tooltip">Timed mock test with latest 50 MCQs</span>
-        </div> -->
+        </div>
     </div>
 
     <div class="exam-tips">
