--- a/index.html
+++ b/index.html
@@ -331,6 +331,14 @@
             <a href="public-mock.html">Public management MCQs( 84 MCQs)</a>
             <span class="tooltip">FOMULA MCQs simulation</span>
         </div>
+          <div class="card">
+            <a href="gk.html">GK MCQs (66 MCQs)</a>
+            <span class="tooltip">GK 66 MCQS</span>
+        </div>
+         <div class="card">
+            <a href="gk1.html">GK MCQs (33 MCQs)</a>
+            <span class="tooltip">GK 33 MCQS LISTED</span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
