--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
             <span class="tooltip">FOMULA MCQs simulation</span>
         </div>
          
-        <div class="card">
+<!--         <div class="card">
             <a href="mock-page.html">Mock Test Simulator</a>
             <span class="tooltip">Timed mock test with latest 50 MCQs</span>
-        </div>
+        </div> -->
     </div>
 
     <div class="exam-tips">
