--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@
             <a href="gk1.html">GK MCQs (33 MCQs)</a>
             <span class="tooltip">GK 33 MCQS LISTED</span>
         </div>
+        <div class="card">
+            <a href="second-paper.html">Second Paper with Summery and 4 short question each with ans</a>
+            <span class="tooltip">Second Paper with Summery and 4 short question each with ans</span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
