--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@
             <a href="second-paper.html">Second Paper with Summery and 4 short question each with ans</a>
             <span class="tooltip">Second Paper with Summery and 4 short question each with ans</span>
         </div>
+         <div class="card">
+            <a href="second-paper.html">Second Paper short question each with ans</a>
+            <span class="tooltip">Second Paper  short question each with ans</span>
+        </div>
     </div>
 
     <div class="container" id="mock-tests" style="display: none;">
